Made the background color changer project

--- a/bg_color_changer/package.json
+++ b/bg_color_changer/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "firstproject",
+  "name": "bg_color_changer",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.11",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
